<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.rf.tutioncounter.DateListActivity">
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="2"
        android:title="@string/delete"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_name"/>
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="1"
        android:title="@string/edit"
        app:showAsAction="always"
        android:icon="@drawable/ic_edit"/>
    <item
        android:id="@+id/action_info"
        android:orderInCategory="1"
        android:title="@string/info"
        app:showAsAction="always"
        android:icon="@drawable/info_icon"/>
</menu>
