<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.rf.tutioncounter.TutorProfileMakerActivity"
    tools:showIn="@layout/activity_tutor_profile_maker">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingRight="5dp">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:hint="@string/Name"
                    android:paddingTop="20dp"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/age"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:hint="@string/Age"
                    android:paddingLeft="10dp"
                    android:paddingTop="20dp"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/passWord"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/passWord"
                    android:inputType="textPassword"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ProPic"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/pp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="50dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="2.9"
                    android:background="@android:drawable/editbox_dropdown_light_frame"
                    android:padding="6dp"
                    app:srcCompat="@drawable/people" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:paddingRight="10dp">

            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/Location"
                android:paddingLeft="10dp"
                android:textSize="25sp" />

            <LinearLayout
                android:id="@+id/sex"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/inst"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="12dp"
                    android:layout_marginLeft="7dp"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:paddingTop="20dp"
                    android:text="@string/Sex"
                    android:textSize="25sp" />

                <CheckBox
                    android:id="@+id/boy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/inst"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    android:text="@string/Male"
                    android:textSize="25sp" />

                <CheckBox
                    android:id="@+id/female"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/boy"
                    android:layout_alignBottom="@+id/boy"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginLeft="72dp"
                    android:layout_weight="1"
                    android:text="@string/Female"
                    android:textSize="25sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/black"
                    android:onClick="createTutorProfile"
                    android:text="Done"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
