<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/background_light"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.rf.tutioncounter.DateListActivity"
    tools:showIn="@layout/activity_date_list">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@android:color/black"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/left"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:gravity="center"
            android:paddingLeft="6dp"
            android:text="@string/date"
            android:textColor="#053369"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/right"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:gravity="center"
            android:paddingLeft="6dp"
            android:text="@string/day"
            android:textColor="#f0b50018"
            android:textSize="30sp"
            android:textStyle="bold|italic" />
    </LinearLayout>
    <ListView
        android:id="@+id/datelist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:background="@color/colorPrimaryDark"
        android:weightSum="1">

        <Button
            android:id="@+id/addAClass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:background="@android:color/background_light"
            android:gravity="center"
            android:text="@string/invokeToAddNewClass"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>
