<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.rf.tutioncounter.editTutorProfileActivity"
    tools:showIn="@layout/activity_edit_tutor_profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:paddingTop="30dp"
                        android:text="@string/Name2"
                        android:textColor="@android:color/black"
                        android:textSize="30dp" />

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:paddingTop="20dp"
                        android:textSize="25sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:paddingTop="30dp"
                        android:text="@string/Age"
                        android:textColor="@android:color/black"
                        android:textSize="30dp" />

                    <EditText
                        android:id="@+id/age"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        android:layout_weight="3"
                        android:paddingLeft="10dp"
                        android:paddingTop="20dp"
                        android:textSize="25sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:paddingTop="30dp"
                        android:text="@string/passWord"
                        android:textColor="@android:color/black"
                        android:textSize="30dp" />

                    <EditText
                        android:id="@+id/passWord"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:textSize="25sp" />
                </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:paddingRight="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:paddingTop="18dp"
                    android:text="@string/Location"
                    android:textColor="@android:color/black"
                    android:textSize="30dp" />

                <EditText
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:ems="10"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sex"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/inst"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="12dp"
                    android:layout_marginLeft="7dp"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:paddingTop="20dp"
                    android:text="@string/Sex"
                    android:textColor="@android:color/black"
                    android:textSize="30sp" />

                <CheckBox
                    android:id="@+id/male"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/inst"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    android:text="@string/Male"
                    android:textSize="30sp" />

                <CheckBox
                    android:id="@+id/female"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/boy"
                    android:layout_alignBottom="@+id/boy"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginLeft="72dp"
                    android:layout_weight="1"
                    android:text="@string/Female"
                    android:textSize="30sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/black"
                    android:onClick="doneEditing"
                    android:text="Done"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
