<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/background_light"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.rf.tutioncounter.studentInfoDetailsActivity"
    tools:showIn="@layout/activity_student_info_details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginTop="10dp"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:paddingBottom="5dp"
                android:src="@drawable/boy"></ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="480dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:drawable/picture_frame"
                android:gravity="center"
                android:text="@string/Name2"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/Cls"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:drawable/picture_frame"
                android:gravity="center"
                android:text="@string/Class"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/Subject"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:drawable/picture_frame"
                android:gravity="center"
                android:text="@string/Subject"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/days"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:drawable/picture_frame"
                android:gravity="center"
                android:text="@string/days"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/mCount"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:drawable/picture_frame"
                android:gravity="center"
                android:text="mCount"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:drawable/picture_frame"
                android:gravity="center">

                <TextView
                    android:id="@+id/Count"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="textDayCount"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <ImageButton
                    android:id="@+id/editCount"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:background="@android:color/background_light"
                    android:visibility="gone"
                    app:srcCompat="@mipmap/edit1" />

            </LinearLayout>

            <TextView
                android:id="@+id/addAcls"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1.5"
                android:background="@android:color/black"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/daysMonth"
                android:textColor="@android:color/background_light"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
