<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.rf.tutioncounter.studentInfoGatheredActivity"
    tools:showIn="@layout/activity_student_info_gathered">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/studentInfoMakeSuccessful"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <Button
                android:id="@+id/buttonStudent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_with_round_corner"
                android:gravity="center"
                android:onClick="addAnotherStudent"
                android:padding="5dp"
                android:text="@string/invokeToAddAnoyherstudent"
                android:textColor="@android:color/background_light"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top|center"
                android:gravity="center"
                android:text="অথবা"
                android:textColor="@android:color/background_light"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp">

            <Button
                android:id="@+id/buttonProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/button_with_round_corner"
                android:gravity="center"
                android:onClick="checkInfo"
                android:padding="10dp"
                android:text="@string/checkYourStudentInfo"
                android:textColor="@android:color/background_light"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
